[package]

name = "hueclient"
version = "0.4.2"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
description = "Rust library for Philips Hue lights"
homepage = "http://github.com/kali/hue.rs"
repository = "http://github.com/kali/hue.rs"
readme = "README.md"
license = "WTFPL"
keywords = [ "Philips", "hue", "light", "bulb" ]
edition = "2018"

[dependencies]
thiserror = "1.0.20"
regex = "1.3"
reqwest = { version = "0.10", features = [ "blocking", "json", "rustls-tls" ], default-features = false}
serde = { version = "1", features = ["derive"]}
serde_json = "1"
ssdp-probe = "0.2"
