[package]

name = "hueclient"
version = "0.5.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
description = "Rust library for Philips Hue lights"
homepage = "http://github.com/kali/hue.rs"
repository = "http://github.com/kali/hue.rs"
readme = "README.md"
license = "WTFPL"
keywords = [ "Philips", "hue", "light", "bulb" ]
edition = "2021"

[dependencies]
thiserror = "2.0.6"
regex = "1.3"
reqwest = { version = "0.12.9", features = [ "json", "rustls-tls" ], default-features = false}
reqwest-eventsource = "0.6.0"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"]}
serde_json = "1"
futures-util = "0.3.17"
futures = "0.3.17"
mdns = "3.0.0"
async-std = "1.12.0"
log = "0.4"
pretty_env_logger = { version = "0.5.0", optional = true }

[dev-dependencies]
tokio-test = "0.4.4"
